--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "codesinging <codesinging@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-register-components": "^2.0.0-beta.35",
+    "@vuepress/utils": "^2.0.0-beta.35",
     "vuepress": "^2.0.0-beta.35"
   }
 }
